--- a/week01/homework.html
+++ b/week01/homework.html
@@ -28,7 +28,7 @@
 
         .wrap {
             width: 800px;
-            margin: auto;
+            margin: 15px auto;
             border: 1px solid black;
         }
 
@@ -58,8 +58,19 @@
             margin-bottom: 20px;
         }
 
+
         .prod-title h4 {
             padding-top: 20px;
+        }
+
+        img {
+            width: 500px;
+            height: 650px;
+            object-fit: cover;
+        }
+
+        .source {
+            font-size: x-small;
         }
     </style>
 </head>
@@ -77,27 +88,27 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="https://i.picsum.photos/id/866/536/354.jpg?hmac=tGofDTV7tl2rprappPzKFiZ9vDh5MKj39oa2D--gqhA"
+                <img src="https://media.gucci.com/style/DarkGray_Center_0_0_800x800/1469468710/451268_K5Z1N_8666_001_080_0000_Light-.jpg"
                      class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>First slide label</h5>
-                    <p>Some representative placeholder content for the first slide.</p>
+                    <h5>front</h5>
+                    <p>용맹한 호랑이</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="https://i.picsum.photos/id/1084/536/354.jpg?grayscale&hmac=Ux7nzg19e1q35mlUVZjhCLxqkR30cC-CarVg-nlIf60"
+                <img src="https://media.gucci.com/style/DarkGray_Center_0_0_2400x2400/1469468711/451268_K5Z1N_8666_003_080_0000_Light-.jpg"
                      class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>Second slide label</h5>
-                    <p>Some representative placeholder content for the second slide.</p>
+                    <h5>back</h5>
+                    <p>구찌 로고</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="https://i.picsum.photos/id/1060/536/354.jpg?blur=2&hmac=0zJLs1ar00sBbW5Ahd_4zA6pgZqCVavwuHToO6VtcYY"
+                <img src="https://media.gucci.com/style/DarkGray_Center_0_0_2400x2400/1469468710/451268_K5Z1N_8666_002_080_0000_Light-.jpg"
                      class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>Third slide label</h5>
-                    <p>Some representative placeholder content for the third slide.</p>
+                    <h5>inner</h5>
+                    <p>깔끔</p>
                 </div>
             </div>
         </div>
@@ -113,15 +124,17 @@
     <div class="wrap inner">
         <div class="prod-intro">
             <div class="prod-title">
-                <h1>상품 제목</h1>
-                <h4><strong>10,000원</strong></h4>
-                <p>이 상품으로 말할 것 같으면, 빨간망토 어쩌구저저쩌꾸</p>
+                <h1>호랑이 지갑</h1>
+                <h4><strong>650,000원</strong></h4>
+            </div>
+            <div class="prod-explanation">
+                <p>무서운 호랑이가 그려져 있는 지갑으로 좌중을 압도해보세요. 하나 사보세요! 주머니가 든든하실겁니다. 물론, 경호용으로도 좋습니다</p>
             </div>
             <form>
                 <div class="form-row">
                     <div class="form-group col-md-6">
                         <label for="inputEmail4">이름</label>
-                        <input type="text" class="form-control" id="inputEmail4">
+                        <input type="text" class="form-control" id="inputEmail4" placeholder="김갑생">
                     </div>
                 </div>
                 <div class="form-group">
@@ -129,7 +142,7 @@
                     <input type="email" class="form-control" id="exampleFormControlInput1"
                            placeholder="name@example.com">
                 </div>
-               
+
                 <div class="form-group">
                     <label for="inputAddress">기본주소</label>
                     <input type="text" class="form-control" id="inputAddress" placeholder="서울특별시 구로구 오류2동">
@@ -153,17 +166,14 @@
                     <label for="exampleFormControlTextarea1">배송 메세지 (직접 입력)</label>
                     <textarea class="form-control" id="exampleFormControlTextarea1" rows="2"></textarea>
                 </div>
-                <div class="form-group">
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" id="gridCheck">
-                        <label class="form-check-label" for="gridCheck">
-                            Check me out
-                        </label>
-                    </div>
-                </div>
-                <button type="submit" class="btn btn-primary">Sign in</button>
+                <button type="submit" class="btn btn-primary">주문하기</button>
             </form>
         </div>
+    </div>
+    <div class="source">
+        <p>출처: 구찌 공식 온라인 스토어</p>
+        <p>
+            "https://www.gucci.com/kr/ko/pr/men/mens-small-leathergoods/mens-wallets/mens-bifold-wallets/tiger-print-gg-supreme-wallet-p-451268K5Z1N8666?utm_source=naver_kr&utm_medium=cpc&utm_campaign=mens-small-leathergoods_shopping&gclid=CjwKCAjwjuqDBhAGEiwAdX2cj-2NjHMNoIN76V89COABkXGcRDI0oeVcrDK874UxFijff9YX8j_X3RoCyN8QAvD_BwE"</p>
     </div>
 </body>
 </html>
