--- a/week01/hw01/homework.html
+++ b/week01/hw01/homework.html
@@ -19,60 +19,8 @@
             crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./main.css">
     <title>Shopping mall</title>
-
-    <style>
-        * {
-            font-family: 'Noto Sans KR', sans-serif;
-        }
-
-        .wrap {
-            width: 800px;
-            margin: 15px auto;
-            border: 1px solid black;
-        }
-
-        .inner {
-            padding: 40px;
-            border: 1px black;
-        }
-
-        .title {
-            padding: 20px;
-        }
-
-        hr {
-            margin-bottom: 0;
-            border: none;
-            height: 1px;
-            background-color: black;
-        }
-
-        .prod-title {
-            margin-bottom: 30px;
-        }
-
-        .prod-title h1 {
-            float: left;
-            width: 50%;
-            margin-bottom: 20px;
-        }
-
-
-        .prod-title h4 {
-            padding-top: 20px;
-        }
-
-        img {
-            width: 500px;
-            height: 650px;
-            object-fit: cover;
-        }
-
-        .source {
-            font-size: x-small;
-        }
-    </style>
 </head>
 <body>
 <div class="wrap">
