Init value after order

--- a/week02/hw02/sweet.html
+++ b/week02/hw02/sweet.html
@@ -98,7 +98,10 @@
                                         <td>${phone}</td>
                                     </tr>`
                                 orderInfo.append(tmpInfo)
-                                // initTemp()
+                                $('#order-name').val('')
+                                $('#order-count').val('')
+                                $('#order-address').val('')
+                                $('#order-phone').val('')
                                 return 0
                             }
                         }
