reset book-info when click btn & f5

--- a/week02/problem_bank2/computerBook.html
+++ b/week02/problem_bank2/computerBook.html
@@ -28,9 +28,11 @@
     <script>
         $(document).ready(function () {
             // 창을 새로고침할 때마다 실행할 함수를 여기에 입력합니다.
+            $('#book-info').empty()
         });
 
         function showBookInfo() {
+            $('#book-info').empty()
             $.ajax({
                 type: "GET",
                 url: "https://openlibrary.org/subjects/computer.json?published_in=2001-2100",
