--- a/week02/problem_bank2/randGrant.html
+++ b/week02/problem_bank2/randGrant.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Javascript + jQuery + Ajax 연습하기</title>
+    <title>Javascript + jQuery + Ajax 연습하기 (random number)</title>
     <!-- JQuery를 import 합니다 -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
