Modify Title about Love

--- a/week02/problem_bank2/loveBook.html
+++ b/week02/problem_bank2/loveBook.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>20세기 사랑 주제의 책 보기</title>
+    <title>20세기 사랑 주제의 책 보세요</title>
     <!-- JQuery를 import 합니다 -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <style type="text/css">
