페이지 로딩 완료 후 동작하는 함수

--- a/week03/memo.html
+++ b/week03/memo.html
@@ -40,6 +40,7 @@
         }
     </style>
     <script>
+        // 페이지 로딩 함수
         $(document).ready(function () {
             console.log('페이지 로딩 완료')
         })
