스파르타 서버에 접속하는 ajax 추가

--- a/week03/memo.html
+++ b/week03/memo.html
@@ -43,6 +43,18 @@
         // 페이지 로딩 함수
         $(document).ready(function () {
             console.log('페이지 로딩 완료')
+            $.ajax({
+                type: 'GET',
+                url: 'http://spartacodingclub.shop/post',
+                data: {},
+                success: function (response) {
+                    let articles = response['articles']
+                    console.log(articles)
+                    for (let i = 0; i < articles.length; i++) {
+                        console.log(articles[i])
+                    }
+                }
+            })
         })
 
         function openClose() {
